# AF-TimeAgent

./: .env.example  .gitignore  pyproject.toml
config/: constants.py  settings.py
db/: connection.py  queries_climate.py  queries_comparables.py  queries_prediction.py  queries_regulatory.py  read_autoresearch.py
docs/: # AF-TimeAgent Refactor Plan — Eliminati.txt  next-steps.md
models/: __init__.py  antitrust.py  climate.py  comparables.py  deal.py  documents.py  prediction.py  regulatory.py  state_machine.py  timeline.py
output/: markdown_renderer.py  scenario_builder.py  table_formatter.py
parsers/: llm_extraction.py  merger_agreement_parser.py  press_release_parser.py  tenk_parser.py
pipeline/: backtest_runner.py  orchestrator.py  step0_validation.py  step1_press_release.py  step2_document_ingestion.py  step3_comparables.py  step4_antitrust.py  step5_5_state_machine.py  step5_regulatory_map.py  step6_timeline.py  step7_prediction_log.py
scoring/: climate.py  feature_weights.py  similarity.py
scripts/: backtest.py  calibrate.py  calibration_report.py  health_check.py  run_deal.py
state_machines/: accc.py  base.py  cfius.py  cma.py  ec.py  generic.py  hsr.py  samr.py
tests/: test_orchestrator.py  test_scoring.py  test_state_machines.py
tests/fixtures/: mock_mars_data.json  sample_10k_excerpt.txt  sample_merger_agreement.txt  sample_press_release.txt
