[project]
name = "af-timeagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
]

[tool.setuptools.packages.find]
include = ["config*", "models*", "db*", "parsers*", "scoring*", "state_machines*", "pipeline*", "output*", "scripts*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
